--- a/bila-cerkva/index-css.css
+++ b/bila-cerkva/index-css.css
@@ -147,13 +147,6 @@
     width: 100%;
     border-radius: 10px;
 }
-.ros{
-    padding: 40px 0 20px 0;
-    margin-bottom: 30px;
-    border-bottom: 1px solid #043410;
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
 .ros1{
     width: 100%;
     border-radius: 10px;
@@ -169,9 +162,7 @@
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.row{
-    align-items: center;
-}
+
 footer{
     background-color: black;
     padding-top: 80px;
@@ -207,6 +198,30 @@ footer{
     height: 100%;
     background-color: rgba(155, 155, 155, 0.698);
     z-index: 50;
+}
+.rirer-ros{
+    padding: 50px 0;
+    background-image: url(4.jpg);
+    
+}
+.ros{
+    padding: 40px 0 20px 0;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #043410;
+    text-align: center;
+    font-family: 'Rasa', serif;
+    font-size: 3rem;
+    color: #043410;
+    font-weight: 900;
+    text-shadow: 0px 0px 12px white;
+    align-items: center;
+
+}
+.white-fon{
+    background-color: rgba(255, 255, 255, 0.748);
+    padding: 20px;
+    font-weight: 600;
+    font-family: 'Rasa', serif;
 }
 .preloader{
     position: fixed;
